test_yuriiq/catalog/language/german/blog/article.php
<?php

// text
$_['text_error']	= 'Artikel nicht gefunden!';
$_['text_write']	= 'Schreiben Sie eine Rezension';
$_['text_wait']	= 'Warten Sie mal!';
$_['text_success']	= 'Vielen Dank für Ihre Bewertung. Es wurde dem Webmaster zur Genehmigung vorgelegt worden.';
$_['text_reviews']	= '%s Bewertungen';
$_['text_on']	= ' auf ';
$_['text_no_reviews']	= 'Es gibt keine Bewertung für diesen Artikel.';
$_['text_note']	= '<span style="color: #FF0000;">Hinweis:</span> Bewertungen sind ohne Pre-Moderation veröffentlicht. Seien Sie höflich, bitte!';

// error
$_['error_captcha']	= 'Warnung: Sicherheitscode nicht mit dem Bild!';
$_['error_text']	= 'Warnung: Bewertungstext muss zwischen 25 und 1000 Zeichen lang sein!';
$_['error_rating']	= 'Achtung: Bitte wählen Sie eine Bewertung von!';
$_['error_name']	= 'Warnung: schreiben Name muss zwischen 3 und 25 Zeichen lang sein!';

// admin
$_['admin_author']	= 'Management-Antwort';

// entry
$_['entry_captcha']	= 'Geben Sie den Code in das folgende Feld:';
$_['entry_name']	= 'Ihren Namen:';
$_['entry_rating']	= 'Bewertung:';
$_['entry_review']	= 'Ihre Bewertung:';
$_['entry_bad']	= 'Schlecht';
$_['entry_good']	= 'Gut';

// tab
$_['tab_related']	= 'In Verbindung stehende Artikel';
$_['tab_related_product']	= 'Ähnliche Produkte';
?>